--- a/widget.ui
+++ b/widget.ui
@@ -29,7 +29,7 @@
       </size>
      </property>
      <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+      <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <row>
       <property name="text">
@@ -48,7 +48,7 @@
      </column>
     </widget>
    </item>
-   <item row="0" column="4" colspan="2">
+   <item row="0" column="4" colspan="3">
     <widget class="QPlainTextEdit" name="resultEdit"/>
    </item>
    <item row="1" column="0">
@@ -85,32 +85,45 @@
     </widget>
    </item>
    <item row="1" column="3">
-    <spacer name="horizontalSpacer">
+    <spacer name="horizontalSpacer_2">
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>68</width>
+       <width>57</width>
        <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="4">
-    <spacer name="horizontalSpacer_2">
+    <spacer name="horizontalSpacer">
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>568</width>
+       <width>488</width>
        <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="5">
+    <widget class="QPushButton" name="getPointValueButton">
+     <property name="minimumSize">
+      <size>
+       <width>130</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>get value at the point</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="6">
     <widget class="QPushButton" name="calculateButton">
      <property name="text">
       <string>Calculate</string>
